[gd_scene load_steps=6 format=3 uid="uid://bv2vv0eg8a2gf"]

[ext_resource type="Script" path="res://Scripts/laser.gd" id="1_0csit"]
[ext_resource type="PackedScene" uid="uid://bfm2uq3svp0gx" path="res://Scenes/end_particles.tscn" id="2_i0q86"]
[ext_resource type="PackedScene" uid="uid://c4kkj6avny1ua" path="res://Scenes/beam_particles.tscn" id="3_cylf8"]

[sub_resource type="CylinderMesh" id="CylinderMesh_7mhtf"]
flip_faces = true
top_radius = 0.03
bottom_radius = 0.03
height = 0.01

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4mviv"]
transparency = 1
albedo_color = Color(0.820745, 0.0629631, 4.81307e-07, 1)
emission_enabled = true
emission = Color(0.819608, 0.0627451, 0, 1)
emission_energy_multiplier = 10.0

[node name="Laser" type="RayCast3D"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("1_0csit")

[node name="BeamMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_7mhtf")
surface_material_override/0 = SubResource("StandardMaterial3D_4mviv")

[node name="endParticles" parent="." instance=ExtResource("2_i0q86")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)

[node name="beamParticles" parent="." instance=ExtResource("3_cylf8")]
